--- a/src/app/number-input/number-input.component.html
+++ b/src/app/number-input/number-input.component.html
@@ -3,7 +3,7 @@
   <div class="input-group-prepend">
     <span class="input-group-text"
           id="basic-addon1">{{(!readonly && !disabled) ? 'Editable Mode' : ''}} {{(!readonly && disabled) ? 'Disabled Mode' : ''}} {{(readonly) ? 'Readonly Mode' : ''}}</span>
-    <input #input (keypress)="onInputChange()" [ngClass]="(model.valid)?'':'form-control is-invalid'"
+    <input #input (focus)="onSessionStart()" (focusout)="onSessionInvalidEnd()" (keypress)="onInputChange()" [ngClass]="(model.valid)?'':'form-control is-invalid'"
            [(ngModel)]="model.currentValue" *ngIf="!readonly; else readonlyMode" [disabled]="disabled" type="text"
            class="form-control" [placeholder]="(disabled)?'Input is disabled':'Type number'"/>
     <br>
